--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "dev": "vite --host",
+    "build": "vite build --mode production",
+    "build:dev": "vite build --mode development",
+    "lint": "eslint . --cache --cache-location ./node_modules/.cache/.eslintcache",
+    "preview": "vite preview --host",
     "start": "node server.cjs",
-    "server": "node server.cjs"
+    "server": "cross-env NODE_ENV=development node server.cjs",
+    "vercel-build": "npm run build",
+    "vercel-dev": "npm run dev"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -36,6 +39,8 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.20.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -45,6 +50,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19",
-    "vercel": "^34.0.0"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-optimize-persist": "^1.0.9",
+    "vite-plugin-package-config": "^1.0.0"
   }
 }
