--- a/package.json
+++ b/package.json
@@ -50,8 +50,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-optimize-persist": "^1.0.9",
-    "vite-plugin-package-config": "^1.0.0"
+    "vite-plugin-compression": "^0.5.1"
   }
 }
